#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(quorra, 0.0.1, bozzo@bozzo.org)
LT_INIT
AM_INIT_AUTOMAKE(quorra, 0.0.1)
#AC_CONFIG_SRCDIR([DummyObject.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC

AC_SEARCH_LIBS([g_main_loop_run], [glib-2.0],,AC_MSG_ERROR(Glib 2.0 not found.))
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

# Checks for libraries.
LTLIBOBJS=`echo "$LIBOBJS" | sed 's/\.[^.]* /.lo /g;s/\.[^.]*$/.lo/'`
AC_SUBST([LTLIBOBJS])

# Checks for header files.
AC_CHECK_HEADER([dbus/dbus-glib-bindings.h])
AC_CHECK_HEADER([dbus/dbus-glib.h])
AC_CHECK_HEADER([glib.h])
AC_CHECK_HEADER([glib-object.h])
AC_CHECK_HEADER([stdlib.h])
AC_CHECK_HEADER([netdb.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
                 plugins/SqueezeSlave/src/Makefile
                 plugins/Xbmc/src/Makefile
                 quorra-core/src/Makefile])
AC_OUTPUT

