#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(quorra, 0.0.1, bozzo@bozzo.org)
LT_INIT
AM_INIT_AUTOMAKE(quorra, 0.0.1)
#AC_CONFIG_SRCDIR([DummyObject.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC

AC_SEARCH_LIBS([g_main_loop_run], [glib-2.0],,AC_MSG_ERROR(Glib 2.0 not found.))
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

# Checks for libraries.
LTLIBOBJS=`echo "$LIBOBJS" | sed 's/\.[^.]* /.lo /g;s/\.[^.]*$/.lo/'`
AC_SUBST([LTLIBOBJS])

# Checks for header files.
AC_CHECK_HEADER([dbus/dbus-glib-bindings.h])
AC_CHECK_HEADER([dbus/dbus-glib.h])
AC_CHECK_HEADER([glib.h])
AC_CHECK_HEADER([glib-object.h])
AC_CHECK_HEADER([stdlib.h])
AC_CHECK_HEADER([netdb.h])
AC_CHECK_HEADER([libpq-fe.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_CHECK_FUNCS([PQconnectdb])

AC_CHECK_FUNCS([g_type_init g_object_new g_malloc])
AC_CHECK_FUNCS([g_option_context_new g_option_context_add_main_entries g_option_context_parse])
AC_CHECK_FUNCS([g_log_set_handler g_key_file_get_string_list g_strdup_printf g_usleep])
				
AC_CHECK_FUNCS([g_module_symbol g_module_open g_module_error g_module_close])				
AC_CHECK_FUNCS([g_thread_new g_thread_join])								
AC_CHECK_FUNCS([g_main_loop_new g_main_loop_run])
				
AC_CHECK_FUNCS([dbus_g_bus_get dbus_g_proxy_new_for_name dbus_g_proxy_add_signal dbus_g_proxy_connect_signal dbus_g_proxy_call_no_reply])

# Checks for library functions.
AC_CONFIG_FILES([Makefile
                 plugins/SqueezeSlave/src/Makefile
                 plugins/Hue/src/Makefile
                 plugins/Xbmc/src/Makefile
                 quorra-core/src/Makefile])
AC_OUTPUT

